--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
-			<p class="info">Spiele mit <span class="sip" data-ip="felitendo.de" data-port="25565">
-			0</span> anderen Spielern auf <span class="ip">felitendo.de</span></p>
+			<p class="info">Spiele mit <span class="sip" data-ip="Felitendo.de" data-port="25565">
+			0</span> anderen Spielern auf <span class="ip">Felitendo.de</span></p>
 		</div>
 	</header>
-	<div class="main">
+	<div class="server">
 		<div id="description">
 			<div>
 				<i class="fa fa-rocket fa-4x"></i>
@@ -128,7 +128,7 @@
 
 			<hr>
 		</div>
-		<div id="staff">
+		<div id="team">
 			<div class="staff">
 				<h2>Unser Team</h2>
 				<div class="staff-team">
@@ -164,7 +164,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="contact">
+		<div id="support">
 			<h2>Kontaktiere uns!</h2>
 			<p>Email - <a href="mailto:felitendoyt@gmail.com">felitendoyt@gmail.com</a></p>
 			<p>Discord - <a href="https://discordapp.com/invite/y0uRliNk">discordapp.com/invite/y0uRliNk</a></p>
