--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 		<div class="nav">
 			<ul class="nav-items" id="nav-items">
 				<a><li onclick="mobile()" class="icon fa fa-bars fa-2x"></li></a>
-				<a href="#main"><li class="h">
+				<a href="#server"><li class="h">
 					<div class="overlay"></div>
 					Server
 				</li></a>
-				<a href="#staff"><li class="h">
+				<a href="#team"><li class="h">
 					<div class="overlay"></div>
 					Team
 				</li></a>
@@ -42,13 +42,13 @@
 					<div class="overlay"></div>
 					Spenden
 				</li></a>
-				<a href="#contact"><li class="h">
+				<a href="#support"><li class="h">
 					<div class="overlay"></div>
 					Support
 				</li></a>
 			</ul>
 			<div class="mnav" id="mnav">
-				<a href="#main"><li class="i">
+				<a href="#server"><li class="i">
 					Server
 				</li></a>
 				<a href="#team"><li class="i">
@@ -57,7 +57,7 @@
 				<a href="#spenden"><li class="i">
 					Spenden
 				</li></a>
-				<a href="#contact"><li class="i">
+				<a href="#support"><li class="i">
 					Support
 				</li></a>
 			</div>
