--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 
-		<div class="hero" id="main">
+		<div class="hero" id="server">
 			<h1>Willkommen auf Felitendo.de</h1>
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
