--- a/index.html
+++ b/index.html
@@ -164,6 +164,20 @@
 				</div>
 			</div>
 		</div>
+		<div id="announcement">
+			<div class="an-img">
+				<h2>Discord</h2>
+				<p class="an-t">
+					<b>Wir haben einen eigenen Discord Server!</b>
+					<br><br>
+					Du hast Fragen über den Server, oder willst dich bewerben? Dann trete doch gerne unseren Discord Server bei!
+					<br><br>
+					Hier wirst du übrigends auch über Events und Giveaways benachrichtigt!
+					<br><br>
+					<a href="#" class="btn">Jetzt beitreten!</a>
+				</p>
+			</div>
+		</div>
 		<div id="support">
 			<h2>Kontaktiere uns!</h2>
 			<p>Email - <a href="mailto:felitendoyt@gmail.com">felitendoyt@gmail.com</a></p>
