--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="overlay"></div>
 					Spenden
 				</li></a>
-				<a href="#support"><li class="h">
+				<a href="#contact"><li class="h">
 					<div class="overlay"></div>
 					Support
 				</li></a>
@@ -57,7 +57,7 @@
 				<a href="#spenden"><li class="i">
 					Spenden
 				</li></a>
-				<a href="#support"><li class="i">
+				<a href="#contact"><li class="i">
 					Support
 				</li></a>
 			</div>
@@ -178,7 +178,7 @@
 				</p>
 			</div>
 		</div>
-		<div id="support">
+		<div id="contact">
 			<h2>Kontaktiere uns!</h2>
 			<p>Email - <a href="mailto:felitendoyt@gmail.com">felitendoyt@gmail.com</a></p>
 			<p>Discord - <a href="https://discordapp.com/invite/y0uRliNk">discordapp.com/invite/y0uRliNk</a></p>
