--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 					<div class="overlay"></div>
 					Spenden
 				</li></a>
-				<a href="#contact"><li class="h">
+				<a href="#announcement"><li class="h">
 					<div class="overlay"></div>
 					Support
 				</li></a>
@@ -57,7 +57,7 @@
 				<a href="#spenden"><li class="i">
 					Spenden
 				</li></a>
-				<a href="#contact"><li class="i">
+				<a href="#announcement"><li class="i">
 					Support
 				</li></a>
 			</div>
@@ -166,7 +166,7 @@
 		</div>
 		<div id="announcement">
 			<div class="an-img">
-				<h2>Discord</h2>
+				<h2>Support</h2>
 				<p class="an-t">
 					<b>Wir haben einen eigenen Discord Server!</b>
 					<br><br>
@@ -177,11 +177,6 @@
 					<a href="#" class="btn">Jetzt beitreten!</a>
 				</p>
 			</div>
-		</div>
-		<div id="contact">
-			<h2>Kontaktiere uns!</h2>
-			<p>Email - <a href="mailto:felitendoyt@gmail.com">felitendoyt@gmail.com</a></p>
-			<p>Discord - <a href="https://discordapp.com/invite/y0uRliNk">discordapp.com/invite/y0uRliNk</a></p>
 		</div>
 	</div>
 	<footer>
