--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 					<br><br>
 					Hier wirst du übrigends auch über Events und Giveaways benachrichtigt!
 					<br><br>
-					<a href="#" class="btn">Jetzt beitreten!</a>
+					<a href="https://discord.gg/jbV6EeebfW" class="btn">Jetzt beitreten!</a>
 				</p>
 			</div>
 		</div>
