--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 					Team
 				</li></a>
 				<div class="log"><img alt="MyServer Logo" class="logo" src="img/logo.png"></div>
-				<a href="https://zap-hosting.com/de/shop/donation/adfe518fd9aab015a237df9d12f483fd/"><li class="h">
+				<a href="#spenden"><li class="h">
 					<div class="overlay"></div>
 					Spenden
 				</li></a>
@@ -159,6 +159,21 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div id="spenden">
+			<div class="an-img">
+				<h2>Spenden</h2>
+				<p class="an-t">
+					<b>Du willst den Server unterstützen? Dann spende hier!</b>
+					<br><br>
+					Mit deiner Spende können wir mehr Server und Arbeitsspeicher kaufen!
+					<br><br>
+					Jede Spende geht zu 100% an unseren Server Hoster!
+					<br><br>
+					<a href="https://zap-hosting.com/de/shop/donation/adfe518fd9aab015a237df9d12f483fd/" class="btn">Jetzt beitreten!</a>
+				</p>
+			</div>
+		</div>
 		</div>
 		<div id="announcement">
 			<div class="an-img">
