--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 				</div>
 			</div>
 		</div>
-		<div id="spenden">
+		<div id="announcement">
 			<div class="an-img">
 				<h2>Spenden</h2>
 				<p class="an-t">
