--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="overlay"></div>
 					Spenden
 				</li></a>
-				<a href="#announcement"><li class="h">
+				<a href="#support"><li class="h">
 					<div class="overlay"></div>
 					Support
 				</li></a>
@@ -53,7 +53,7 @@
 				<a href="#spenden"><li class="i">
 					Spenden
 				</li></a>
-				<a href="#announcement"><li class="i">
+				<a href="#support"><li class="i">
 					Support
 				</li></a>
 			</div>
@@ -160,6 +160,7 @@
 				</div>
 			</div>
 		</div>
+		<div id="spenden">
 		<div id="announcement">
 			<div class="an-img">
 				<h2>Spenden</h2>
@@ -175,6 +176,7 @@
 			</div>
 		</div>
 		</div>
+	        <div id="support">
 		<div id="announcement">
 			<div class="an-img">
 				<h2>Support</h2>
