--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Felitendo.de - Der beste Minecraft Server der Welt</title>
-	<meta name="description" content="Felitendo.de ist ein Free2Play Minecraft Server. Du kannst mit der IP 'felitendo.de' den Server beitreten.">
-	<meta name="keywords" content="Felitendo, Felitendo.de, Minecraft Server, Minecraft, Fun, Free2Play, Play, Website, Official">
+	<title>Felitendo.de - Minecraft Server</title>
+	<meta name="description" content="Felitendo.de ist ein Free2Play Minecraft Server. Du kannst ihn mit der IP 'felitendo.de' beitreten.">
+	<meta name="keywords" content="Felitendo, Felitendo.de, Minecraft Server, Minecraft, BedWars, Free2Play, Server, Website, Survival">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
