--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
 			<div class="an-img">
 				<h2>Spenden</h2>
 				<p class="an-t">
-					<b>Du willst den Server unterstützen? Dann spende hier!</b>
+					<b>Du willst den Server unterstützen? Dann kannst du hier gerne spenden!</b>
 					<br><br>
 					Mit deiner Spende können wir mehr Server und Arbeitsspeicher kaufen!
 					<br><br>
-					Jede Spende geht zu 100% an unseren Server Hoster!
+					Jede Spende geht zu 100% an unseren Server!
 					<br><br>
 					<a href="https://zap-hosting.com/de/shop/donation/adfe518fd9aab015a237df9d12f483fd/" class="btn">Jetzt beitreten!</a>
 				</p>
