--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Felitendo.de - Minecraft Server</title>
-	<meta name="description" content="Felitendo.de ist ein Free2Play Minecraft Server. Du kannst ihn mit der IP 'feliteereeeeeendo.de' beitreten.">
+	<meta name="description" content="Felitendo.de ist ein Free2Play Minecraft Server. Du kannst ihn mit der IP 'felitendo.de' beitreten.">
 	<meta name="keywords" content="Felitendo, Felitendo.de, Minecraft Server, Minecraft, BedWars, Free2Play, Server, Website, Survival">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta charset="utf-8">
