--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 					<br><br>
 					Jede Spende geht zu 100% an unseren Server!
 					<br><br>
-					<a href="https://zap-hosting.com/de/shop/donation/adfe518fd9aab015a237df9d12f483fd/" class="btn">Jetzt beitreten!</a>
+					<a href="https://zap-hosting.com/de/shop/donation/adfe518fd9aab015a237df9d12f483fd/" class="btn">Jetzt spenden!</a>
 				</p>
 			</div>
 		</div>
